more tests for JmLib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,11 @@
     ],
     "cSpell.ignoreWords": [
         "ababa",
-        "testsalt"
+        "brulee",
+        "brûlée",
+        "crème",
+        "façade",
+        "testsalt",
+        "über"
     ]
 }
