--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "janmensik/jmlib",
+  "version": "1.1.0",
   "description": "PHP objects and functions for base app",
   "require": {
     "php": ">=8.0",
