--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "janmensik/jmlib",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "PHP objects and functions for base app",
   "require": {
     "php": ">=8.0",
@@ -27,5 +27,8 @@
     "allow-plugins": {
       "pestphp/pest-plugin": true
     }
+  },
+  "scripts": {
+    "release": "php -r \"$v = json_decode(file_get_contents('composer.json'))->version; echo 'Tagging v'.$v.PHP_EOL; system('git tag v'.$v); system('git push origin v'.$v);\""
   }
 }
