--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
   "version": "1.3.1",
   "description": "PHP objects and functions for base app",
   "require": {
-    "php": ">=8.0",
-    "pestphp/pest": "^2.0"
+    "php": ">=8.0"
+  },
+  "require-dev": {
+    "pestphp/pest": "^3.0"
   },
   "license": "MIT",
   "authors": [
@@ -26,6 +28,9 @@
   "config": {
     "allow-plugins": {
       "pestphp/pest-plugin": true
+    },
+    "platform": {
+      "php": "8.2.0"
     }
   },
   "scripts": {
